compiler/acton/test/typeerrors/ex18.act
def f(ls : list[A]):
    return len(ls) + "hej"
